# cppjieba

./: CMakeLists.txt
test/: demo.cpp
wasm/: jieba.cpp
